--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,13 @@
 <body>
 
     <div>
-        <h1>Simulador de IMC</h1>
+        <br><h1>🖩Simulador de IMC</h1>
         <input type="number" placeholder="Peso (kg)" id="peso"> <br> <br>
         <input type="number" placeholder="Altura (m)" id="altura"> <br> <br>
-        <input type="button" value="Calcular" onclick="calcular" id="botao">
+        <input type="button" value="Calcular IMC" onclick="calcular()" id="botao">
+        <h1 id="restitulo"></h1>
+        <p id="imc"></p>
+        <p id="class"></p><br>
     </div>
     
 </body>
